syntax = "proto3";

option go_package = "github.com/fernandndo19/mybank/gateway/grpc/accounts";

message DepositRequest {
    string accountID = 1;
    string amount = 2;
}

message Response {
    bool success = 1;
    sfixed32 errorCode = 2;
    string errorDescription = 3 ;
}

service AccountsService {
    rpc Deposit(DepositRequest) returns (Response) {}
}